updateservice/manifests/update-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: update
  labels:
    app: update

spec:
  replicas: 1
  selector:
    matchLabels:
      app: update
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 2
  template:
    metadata:
      labels:
        app: update
    spec:
      containers:
        - name: update
          image: bryanwsebaraj/update
          ports:
            - containerPort: 5432
