updateservice/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: update
spec:
  selector:
    app: update
  type: ClusterIP
  ports:
    - name: db
      port: 5432
      targetPort: 5432
      protocol: TCP
